<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDiary</string>
    <string name="set_password_menu_item">Set Password</string>
    <string name="new_diary_edit_text_hint">Please enter your content here</string>
    <string name="new_diary_add_diary_button">Add Diary</string>
    <string name="new_diary_cancel_button">Cancel</string>
    <string name="diary_page_deault_text">No Content</string>
    <string name="diary_list_add_diary_button">Add New Diary</string>
    <string name="diary_list_search_hint">Search</string>
    <string name="diary_page_edit_diary_button">Edit</string>
    <string name="diary_page_back_button">Back</string>
    <string name="password_enter_pass_word_text">Please Enter Your Password</string>
    <string name="set_password_cancel_button_text">Cancel</string>
    <string name="set_password_clear_button_text">Clear</string>
    <string name="set_password_done_button_text">Done</string>
    <string name="set_password_enter_4_digits_text">Please Enter A 4 digit Password</string>
    <string name="set_password_enter_old_password_text">Please Enter your old password</string>
    <string name="set_password_enter_new_password_text">Please Set your new password</string>
    <string name="password_wrong_password">Wrong Password</string>
    <string name="diary_list_no_diary_found">no diary found</string>
    <string name="diary_list_diaries_found"> diaries found</string>
    <string name="diary_list_search_no_text">Please enter something</string>
    <string name="diary_list_search_no_found">Can\'t find anything</string>
    <string name="diary_list_alert_delete">Are you sure you want to delete this diary?</string>
    <string name="diary_list_alert_delete_title">Delete Diary</string>
    <string name="diary_list_diary_deleted">Diary deleted</string>
    <string name="diary_list_nothing_deleted">Nothing was deleted</string>
    <string name="diary_page_edit">Edit</string>
    <string name="diary_page_done">Done</string>
    <string name="alert_no">No</string>
    <string name="alert_yes">Yes</string>
    <string name="no_audio_clip">No Audio Clip Available</string>
    <string name="audio_file_deleted">Audio File Deleted</string>
    <string name="date_picker_title">Date of Event:</string>
    <string name="share_button">Share</string>
    <string name="shared">Shared</string>
    <string name="diary_obtained_from_parse">New Diary Added</string>
    <string name="already_on_parse">You have shared this</string>
    <string name="share_diglog_title">Share My Diary</string>
    <string name="share_dialog_message">Are you sure that you want to share this diary?</string>
    <string name="share_dialog_yes">Yes</string>
    <string name="share_dialog_no">Cancel</string>
    <string name="select_image_dialog_title">Select Image</string>
    <string name="select_image_dialog_SD">From SD Card</string>
    <string name="select_image_dialog_camera">From Camera</string>

</resources>
