<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:weightSum="1"
    android:background="@drawable/bg3">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:id="@+id/text_edit_text"
        android:hint="@string/new_diary_edit_text_hint"
        android:gravity="top"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="1/1/1"
        android:textStyle="bold"
        android:id="@+id/date_picker_button"
        android:background="@drawable/new_diary_button_bg"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


    <LinearLayout
        android:gravity="center"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/camera"
            android:id="@+id/take_photo_button"
            android:layout_margin="5dp"
            />

            <Button
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:id="@+id/cancel_photo_taking_button"
                android:background="@drawable/delete_photo"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/record_audio_button"
            android:background="@drawable/record_icon"
            android:layout_margin="5dp"
            />

        <Button
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/cancel_audio_button"
            android:background="@drawable/delete_audio"
            android:layout_margin="5dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:id="@+id/play_pause_button"
                android:background="@drawable/play_icon"
                android:layout_margin="5dp"
                />
            <Button
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:id="@+id/restart_button"
                android:background="@drawable/restart_play_icon"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/photo_image_view"
        android:src="@drawable/ha_ha"
        android:padding="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/add_diary_button"
            android:text="@string/new_diary_add_diary_button"
            android:layout_weight="1"
            android:background="@drawable/new_diary_button_bg"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="50dp"
            android:id="@+id/cancel_new_diary_button"
            android:text="@string/new_diary_cancel_button"
            android:layout_weight="1"
            android:background="@drawable/new_diary_button_bg"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>